# knowledge_database

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build  class_diagram.drawio  main.cpp  posgres_test_queries.txt
src/: common.hpp  content_index.cpp  content_index.hpp  content_manager.cpp  content_manager.hpp  content_page.cpp  content_page.hpp  content_tree.cpp  content_tree.hpp  content_unit.cpp  content_unit.hpp  database_manager.cpp  database_manager.hpp
src/contrib/logger/: CMakeLists.txt
src/contrib/logger/include/logger/: format.h  logger.h  saver_syslog.h
src/contrib/logger/include/thread/: thread_pool.h  thread_utils.h
src/contrib/logger/src/logger/: logger.cpp  saver_syslog.cpp
src/contrib/logger/src/thread/: thread_base.cpp  thread_pool.cpp  thread_up.cpp  thread_utils.cpp
src/knowledge_manager/: CMakeLists.txt
src/knowledge_manager/include/: common.hpp  content_index.hpp  content_manager.hpp  content_page.hpp  database_manager.hpp
src/knowledge_manager/include/utils/: utils.hpp
src/knowledge_manager/src/: content_index.cpp  content_manager.cpp  content_page.cpp  database_manager.cpp  utils.cpp
src/utils/: utils.cpp  utils.hpp
tests/: CMakeLists.txt  database_tests.cpp  db_fixture.hpp
